Fixes grid spacing

--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -198,7 +198,7 @@ section.features {
   @media screen and (min-width: $large-screen) {
     ul {
       display: grid;
-      grid-template-columns: 33.6% 33.0% 33.6%;
+      grid-template-columns: 33.33% 33.33% 33.34%;
       grid-template-rows: 100%;
       height: 33vh;
     }
